# honeyml

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
builder/: README.md  autoencoder_kl.py  autoencoder_kl_encode.py  config.py  flux-schnell.py  flux.py  flux_single_transformer_block.py  flux_transformer_block.py  kadinsky3.py  pad_conv_test.py  pixart.py  sd-cascade-prior.py  sd1-inpaint.py  sd1.py  sd2.py  sd3.py  sdxl-refiner.py  sdxl.py
csrc/: README.md  debug_utility.cpp  model_container.cpp  model_interface.cpp  rocm_hack.cpp  standalone.cpp  utility.cpp  windll.cpp
csrc/include/: cuda_device_functions.h  debug_utility.h  jagged.h  logging.h  macros.h  model.h  model_container.h  model_interface.h  owned_constants.h  raii_wrapper.h  rocm_device_functions.h  short_file.h  utility.h  windll.h
docs/: CONTRIBUTING.md  ENVIRONMENT.md  MODULES.md  README.md
inference/: autoencoder_kl.py  flux_dev.py  test_autoencoder.py  test_autoencoder_decode.py
modeling/: __init__.py  embeddings.py  modeling_outputs.py  normalization.py  resnet.py  upsampling.py  utils.py
modeling/autoencoders/: README.md  autoencoder_asym_kl.py  autoencoder_kl.py  autoencoder_kl_temporal_decoder.py  vq_model.py
modeling/transformers/: dit_transformer_2d.py  hunyuan_transformer_2d.py  pixart_transformer_2d.py  transformer_sd3.py
scripts/: autoencoder_kl_decode_build.py  autoencoder_kl_encode_build.py  esrgan_build.py  t5_build.py  transformer_flux_build.py  unet2d_condition_build.py
src/: setup.py
src/dinoml/: __init__.py
(+1867 files in other folders)
