[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinoml"
version = "0.1.0"
description = "DinoML"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7, <4"
dependencies = [
    "jinja2",
    "numpy",
    "sympy",
    "click"
]
